Revision history for DBM::Deep.

1.0014 Jun 13 23:15:00 2008 EST
    - (This version is compatible with 1.0013)
    - Fix for RT#36781 (t/44 has an unrequired dependency)
    - Start the process of optimization.

1.0013 Jun 13 23:15:00 2008 EST
    - (This version is compatible with 1.0012)
    - Fix for RT#30144 (Optimization failure on Win32)
    - Fixed a bug in reindex_entry (Thanks, Wulfram Humann!)

1.0012 Jun 09 15:00:00 2008 EST
    - (This version is compatible with 1.0011)
    - Fix for RT#30085 (Remove dependency on XS module)
        - Thank you very much tachyon-II@Perlmonks!!
        - This also resolves RT#35424 (DBM::Deep breaks XML::Twig).
    - Updated the POD with fixes that were made, but still on the TODO list.
    - Bypass for RT#36419 (t/44_upgrade_db.t fails on *BSD)
        - We're just going to skip that for now. It's a number-of-processes-open
        issue. Best is to do a port to another module to do the heavy lifting.

1.0011 May 27 15:00:00 2008 EST
    - (This version is compatible with 1.0010)
    - A test has the wrong plan.

1.0010 May 27 12:00:00 2008 EST
    - (This version is compatible with 1.0009)
    - Fix for RT#35140 (invalid POD links)
    - Fix for RT#34819 (Cannot assign the same value back to the same location)
    - Fix for RT#29957 (Cannot assign the same value back to the same location)
    - Fix for RT#33863 (Cannot shift an arrayref from an array)
    - When something is deleted from a DB, the value is export()ed, allowing it
      to be saved.
      - This exporting is only done if the refcount == 0 after the deletion.

1.0009 Mar 19 12:00:00 2008 EDT
    - (This version is compatible with 1.0008)
    - Internal refactorings to prepare for some optimizations.
        - _fh() has been removed. It was marked as private, so don't complain.
    - Skip a test that was spuriously failing on Win32 (Thanks, Alias!)

1.0008 Mar 09 20:00:00 2008 EDT
    - (This version is compatible with 1.0007)